# Shell-ai

./: .gitignore  README.md  main.py  pyproject.toml
