[project]
name = "shell-ai"
version = "0.1.0"
description = "A shell AI tool to interact with the terminal using natural language."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[google]>=1.0.7",
    "python-dotenv>=1.1.1",
]
[project.scripts]
ai = "main:main"
